modification de cursor

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,15 +125,18 @@ header {
 }
 #banner .arrow_left {
 	left: 10px;
+	cursor: pointer;
 }
 #banner .arrow_right {
 	right: 10px;
+	cursor: pointer;
 }
 /* Gestion des points du carrousel */
 .dots {
 	position: absolute;
 	bottom: 40px;
 	display: flex;
+	cursor: pointer;
 }
 .dot {
 	margin-inline: 5px;
